# aivo

./: .dockerignore  .editorconfig  .eslintignore  .gitattributes  .gitignore  .hadolint.yaml  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .spectral.yaml  .trufflehogignore  .yamllint.yaml  CODEOWNERS  DOCKER_BUILD_SCAN_GUIDE.md  DOCKER_BUILD_SCAN_STATUS.md  DOCKER_BUILD_SCAN_STATUS_FIXED.md  DOCKER_SECURITY_REPORT.md  LICENSE  MESH_IMPLEMENTATION_STATUS.md  Makefile  README.md  S2C-04-STATUS.md  S2C-05-FINAL-STATUS.md  S2C-05-IMPLEMENTATION-STATUS.md  S2C-06-IMPLEMENTATION-COMPLETE.md  S2C-11-IMPLEMENTATION-COMPLETE.md  SECURITY.md  SECURITY_AUDIT_GUIDE.md  SECURITY_AUDIT_GUIDE_FIXED.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TRUFFLEHOG_GUIDE.md  TRUFFLEHOG_STATUS.md  TRUFFLEHOG_STATUS_FIXED.md  build.ps1  eslint.config.js  fix_format_examples.py  fix_openapi_issues.py  fix_syntax.py  fix_undefined_e.py  (+13 more)
services/admin-portal-svc/: Dockerfile  pyproject.toml  requirements.txt  run.py
services/admin-portal-svc/app/: __init__.py  cache_service.py  config.py  http_client.py  main.py  models_settings.py  routes_rbac.py  routes_settings.py  schemas.py  service_aggregator.py
services/admin-portal-svc/tests/: conftest.py  test_admin_portal.py  test_cache.py  test_integration.py
services/analytics-svc/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
services/analytics-svc/app/: __init__.py  config.py  main.py  models.py  privacy.py  snowflake.py
services/analytics-svc/tests/: test_main.py
services/assessment-svc/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
services/assessment-svc/app/: assessment_engine.py  config.py  enums.py  event_service.py  main.py  schemas.py
services/assessment-svc/tests/: __init__.py  test_assessment.py
services/audit-log-svc/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_s2c05_simple.py  validate_s2c05.py
services/audit-log-svc/app/: __init__.py  config.py  database.py
services/auth-svc/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
services/auth-svc/app/: database.py  main.py  models.py  notifications.py  rbac.py  routes.py  routes_rbac.py  schemas.py  security.py
services/auth-svc/migrations/: env.py
services/auth-svc/tests/: conftest.py  test_auth.py  test_auth_flows.py  test_integration.py
services/chat-svc/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/chat-svc/app/: database.py  main.py  models.py  routes.py  schemas.py
services/chat-svc/tests/: test_basic.py
services/consent-ledger-svc/: .env.example  Makefile  README.md  main.py  pyproject.toml
services/consent-ledger-svc/app/: __init__.py  tasks.py
services/consent-ledger-svc/config/: __init__.py  database.py  settings.py
services/coursework-ingest-svc/: pyproject.toml
services/coursework-ingest-svc/app/: __init__.py  config.py  database.py  models.py  schemas.py
services/data-mesh-svc/: README.md  pyproject.toml
services/data-mesh-svc/app/: main.py
services/device-enroll-svc/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/device-enroll-svc/app/: __init__.py  database.py  main.py  models.py  routes.py  schemas.py  services.py
services/device-enroll-svc/tests/: __init__.py  test_services.py
services/device-ota-svc/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/device-ota-svc/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
services/device-ota-svc/tests/: conftest.py  test_health.py
services/ela-eval-svc/: Dockerfile  README.md  pyproject.toml
services/ela-eval-svc/app/: __init__.py  config.py  evaluator_service.py  main.py  schemas.py
services/ela-eval-svc/tests/: __init__.py  test_main.py
services/enrollment-router-svc/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/enrollment-router-svc/app/: __init__.py  database.py  main.py  models.py  schemas.py  services.py
services/enrollment-router-svc/tests/: __init__.py  conftest.py  test_api.py  test_audit.py  test_district_path.py  test_parent_path.py
services/etl-jobs/: .env.example  Dockerfile  README.md  pyproject.toml
services/etl-jobs/app/: __init__.py  config.py  main.py  models.py
services/etl-jobs/fixtures/: test_minute_metrics.csv  (+1 more)
services/event-collector-svc/: .env.example  Dockerfile  README.md  check_deps.py  fix_long_lines.py  fix_long_lines_clean.py  line_summary.py  pyproject.toml  requirements.txt  run.py  test_dependencies.py  test_long_line.py  test_service.py
services/evidence-svc/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/hello-svc/: pyproject.toml  requirements.txt
services/i18n-svc/: Makefile  README.md  pyproject.toml
services/iep-svc/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
services/inference-gateway-svc/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test_enum.py
services/ink-svc/: .env.example  Dockerfile  README.md  pyproject.toml
services/learner-svc/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/lesson-registry-svc/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
services/math-recognizer-svc/: .pylintrc  Dockerfile  README.md  pyproject.toml
services/media-svc/: Dockerfile  Makefile  README.md  pyproject.toml
services/model-dispatch-svc/: .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
services/notification-svc/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.email-nodejs  Makefile  README.md  client-sdk.ts  dev_server.py  pyproject.toml  requirements-simple.txt  requirements.txt  run.py
services/payment-svc/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/private-fm-orchestrator/: .env.example  Dockerfile  pyproject.toml
services/problem-session-svc/: README.md  pyproject.toml
(+1564 files in other folders)
