[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aivo-evidence-svc"
version = "0.1.0"
description = "Evidence extraction and IEP goal linkage service with Textract/Whisper"
authors = ["Aivo Team <dev@aivo.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.4.0"
pydantic-settings = ">=2.0.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.0"}
asyncpg = ">=0.29.0"
alembic = ">=1.12.0"

# AWS Services
boto3 = ">=1.34.0"
botocore = ">=1.34.0"

# Audio Processing
openai = ">=1.3.0"
openai-whisper = ">=20231117"
pydub = ">=0.25.1"
ffmpeg-python = ">=0.2.0"

# Document Processing
PyPDF2 = ">=3.0.0"
python-docx = ">=1.1.0"
Pillow = ">=10.0.0"

# ML & NLP
scikit-learn = ">=1.3.0"
nltk = ">=3.8.1"
spacy = ">=3.7.0"
transformers = ">=4.35.0"
torch = ">=2.1.0"

# Storage & Caching
redis = ">=5.0.0"
motor = ">=3.3.0"

# Utilities
httpx = ">=0.25.0"
python-multipart = ">=0.0.6"
python-json-logger = ">=2.0.7"
cryptography = ">=41.0.0"
hashlib-compat = ">=1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
black = ">=23.9.0"
ruff = ">=0.1.0"
mypy = ">=1.6.0"
pre-commit = ">=3.5.0"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py311']
line-length = 88
skip-string-normalization = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
